@@ -78,6 +78,7 @@
     <Compile Include="GUI\Thumbnails.cs" />
     <Compile Include="Interfaces.cs" />
     <Compile Include="LevelUpExtension.cs" />
+    <Compile Include="Patches\SpecializationPatches.cs" />
     <Compile Include="Settings\OptionsPanel.cs" />
     <Compile Include="Settings\OptionsPanelTabs\ModOptions.cs" />
     <Compile Include="Settings\OptionsPanelTabs\GrowableOptions.cs" />
